fix: text or blocks falling out when overflowing css

--- a/blocks/news/topic-subtitle/news__topic-subtitle.css
+++ b/blocks/news/topic-subtitle/news__topic-subtitle.css
@@ -21,7 +21,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 120%;
-    margin-top: 10px;
+    margin-top: 0px;
     margin-bottom: 0;
   }
 }
